--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -52,13 +52,13 @@
 				<button ion-button block class="sticky_notes_btn" (click)="goquicknotes()">Sticky Notes</button>
 			</ion-col>
 
-			<ion-col col-12>
+			<!-- <ion-col col-12>
 				<button ion-button block class="sticky_notes_btn" (click)="showBanner()">Show Banner</button>
 			</ion-col>
 
 			<ion-col col-12>
 				<button ion-button block class="sticky_notes_btn" (click)="launchInterstitial()">Show Interstitial</button>
-			</ion-col>
+			</ion-col> -->
 
 		</ion-row>
 	</ion-grid>
